--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,16 @@
 			<version>2.0.0.Final</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- RestEasy client -->
+ 		<dependency>
+ 			<groupId>org.jboss.resteasy</groupId>
+ 			<artifactId>resteasy-client</artifactId>
+ 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.8.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
